# ai-chatbot

./: README.md  main.py  pyproject.toml
ai_chat/: models.py  services.py  urls.py  views.py
ai_chat/migrations/: 0001_initial.py
ai_chat/templates/ai_chat/: base.html  chat.html
ai_chat/templates/ai_chat/partials/: response.html
core/: settings.py  urls.py
